[gd_scene load_steps=10 format=3 uid="uid://cphmtulivcicg"]

[ext_resource type="Script" path="res://screens/game/game_screen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dhold8ocsbk5t" path="res://widgets/small_button/small_button.tscn" id="2"]
[ext_resource type="PackedScene" path="res://containers/hand/hand.tscn" id="3"]
[ext_resource type="PackedScene" path="res://containers/token_grid/token_grid.tscn" id="4"]
[ext_resource type="FontData" uid="uid://bte6bvg3h4lwj" path="res://fonts/ArchivoNarrow-Bold.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://bmwxtjfs57brr" path="res://screens/game/mana_point.png" id="6"]

[sub_resource type="Font" id="1"]
variation_coordinates = {
}
data/0 = ExtResource( "5" )

[sub_resource type="Font" id="2"]
variation_coordinates = {
}
data/0 = ExtResource( "5" )

[sub_resource type="Font" id="3"]
variation_coordinates = {
}
data/0 = ExtResource( "5" )

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.45098, 0.509804, 0.701961, 1)
script = null

[node name="DeckZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_min_size = Vector2(80, 80)
color = Color(0.917647, 0.890196, 0.521569, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawCount" type="Label" parent="DeckZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( "1" )
text = "0"
align = 1
valign = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DrawBtn" type="Button" parent="DeckZone"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Draw"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_min_size = Vector2(80, 80)
color = Color(0.917647, 0.890196, 0.521569, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardCount" type="Label" parent="DiscardZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( "1" )
text = "0"
align = 1
valign = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ReshuffleBtn" type="Button" parent="DiscardZone"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
text = "Reshuffle"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_min_size = Vector2(300, 300)
color = Color(0.14902, 0.172549, 0.239216, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenGrid" parent="PlayZone" instance=ExtResource( "4" )]
anchor_right = 1.0
anchor_bottom = 1.0
in_anchor = NodePath("../TokenInOut")
out_anchor = NodePath("../TokenInOut")

[node name="TokenInOut" type="Control" parent="PlayZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2(1e-05, 1e-05)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ManaBar"]
offset_right = 41.0
offset_bottom = 55.0
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( "2" )
text = "Mana  "
valign = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Mana1" type="TextureRect" parent="ManaBar"]
offset_left = 45.0
offset_right = 85.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana2" type="TextureRect" parent="ManaBar"]
offset_left = 89.0
offset_right = 129.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana3" type="TextureRect" parent="ManaBar"]
offset_left = 133.0
offset_right = 173.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana4" type="TextureRect" parent="ManaBar"]
offset_left = 177.0
offset_right = 217.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana5" type="TextureRect" parent="ManaBar"]
offset_left = 221.0
offset_right = 261.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana6" type="TextureRect" parent="ManaBar"]
offset_left = 265.0
offset_right = 305.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana7" type="TextureRect" parent="ManaBar"]
offset_left = 309.0
offset_right = 349.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana8" type="TextureRect" parent="ManaBar"]
offset_left = 353.0
offset_right = 393.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana9" type="TextureRect" parent="ManaBar"]
offset_left = 397.0
offset_right = 437.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="Mana10" type="TextureRect" parent="ManaBar"]
offset_left = 441.0
offset_right = 481.0
offset_bottom = 55.0
rect_min_size = Vector2(40, 40)
texture = ExtResource( "6" )
expand = true
stretch_mode = 6
script = null

[node name="EndTurnBtn" parent="ManaBar" instance=ExtResource( "2" )]
offset_left = 485.0
offset_right = 660.0
offset_bottom = 55.0
rect_min_size = Vector2(175, 55)

[node name="HandZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_min_size = Vector2(800, 160)
color = Color(0.239216, 0.286275, 0.439216, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandContainer" parent="HandZone" instance=ExtResource( "3" )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
in_anchor = NodePath("../HandInAnchor")
out_anchor = NodePath("../HandOutAnchor")

[node name="HandInAnchor" type="Control" parent="HandZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_rotation = 45.0
rect_scale = Vector2(1e-05, 1e-05)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandOutAnchor" type="Control" parent="HandZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_rotation = 90.0
rect_scale = Vector2(1e-05, 1e-05)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsLayout" type="VBoxContainer" parent="."]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="EffectsLayout"]
offset_right = 232.0
offset_bottom = 22.0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource( "3" )
text = "Effects"
align = 1
structured_text_bidi_override_options = []
script = null

[node name="FilterTitle" type="Label" parent="EffectsLayout"]
offset_top = 26.0
offset_right = 232.0
offset_bottom = 52.0
text = "Apply to:"
structured_text_bidi_override_options = []
script = null

[node name="FilterLayout" type="HBoxContainer" parent="EffectsLayout"]
offset_top = 56.0
offset_right = 232.0
offset_bottom = 87.0
script = null

[node name="DrawFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
offset_right = 69.0
offset_bottom = 31.0
pressed = true
text = "Draw"
script = null

[node name="HandFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
offset_left = 73.0
offset_right = 142.0
offset_bottom = 31.0
pressed = true
text = "Hand"
script = null

[node name="DiscardFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
offset_left = 146.0
offset_right = 232.0
offset_bottom = 31.0
pressed = true
text = "Discard"
script = null

[node name="ManaMultiplier" type="CheckButton" parent="EffectsLayout"]
offset_top = 91.0
offset_right = 232.0
offset_bottom = 131.0
text = "Common mana x2"
script = null

[node name="OnPlayedEffect" type="CheckButton" parent="EffectsLayout"]
offset_top = 135.0
offset_right = 232.0
offset_bottom = 175.0
text = "Mana +1 on played"
script = null

[node name="ManaIncrease" type="Button" parent="EffectsLayout"]
offset_top = 179.0
offset_right = 232.0
offset_bottom = 208.0
text = "Mana +1"
script = null

[node name="ManaDecrease" type="Button" parent="EffectsLayout"]
offset_top = 212.0
offset_right = 232.0
offset_bottom = 241.0
text = "Mana -1"
script = null

[node name="MenuBtn" parent="." instance=ExtResource( "2" )]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = 0.0
rect_min_size = Vector2(0, 0)
text = "Back to menu"

[node name="StartingHandDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
script = null

[connection signal="pressed" from="DeckZone/DrawBtn" to="." method="_on_DrawBtn_pressed"]
[connection signal="pressed" from="DiscardZone/ReshuffleBtn" to="." method="_on_ReshuffleBtn_pressed"]
[connection signal="card_clicked" from="PlayZone/TokenGrid" to="." method="_on_TokenGrid_card_clicked"]
[connection signal="card_dropped" from="PlayZone/TokenGrid" to="." method="_on_TokenGrid_card_dropped"]
[connection signal="pressed" from="ManaBar/EndTurnBtn" to="." method="_on_EndTurnBtn_pressed"]
[connection signal="toggled" from="EffectsLayout/ManaMultiplier" to="." method="_on_ManaMultiplier_toggled"]
[connection signal="pressed" from="EffectsLayout/ManaIncrease" to="." method="_on_ManaIncrease_pressed"]
[connection signal="pressed" from="EffectsLayout/ManaDecrease" to="." method="_on_ManaDecrease_pressed"]
[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="timeout" from="StartingHandDelay" to="." method="_on_StartingHandDelay_timeout"]
